2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/data/ok/peg_tclparam-tcloo/0_basic_arithmetic: Updated the
	* tests/data/ok/peg_tclparam-tcloo/10_notahead: test data to match
	* tests/data/ok/peg_tclparam-tcloo/1_functions: the [2011-06-06]
	* tests/data/ok/peg_tclparam-tcloo/2_fun_arithmetic: change.
	* tests/data/ok/peg_tclparam-tcloo/3_peg_itself:
	* tests/data/ok/peg_tclparam-tcloo/4_choice:
	* tests/data/ok/peg_tclparam-tcloo/5_sequence:
	* tests/data/ok/peg_tclparam-tcloo/6_optional:
	* tests/data/ok/peg_tclparam-tcloo/7_kleene:
	* tests/data/ok/peg_tclparam-tcloo/8_pkleene:
	* tests/data/ok/peg_tclparam-tcloo/9_ahead:

	* tests/data/ok/peg_param-critcl/0_basic_arithmetic: Updated the
	* tests/data/ok/peg_param-critcl/10_notahead: test data to match
	* tests/data/ok/peg_param-critcl/1_functions: an unrecorded code
	* tests/data/ok/peg_param-critcl/2_fun_arithmetic: change.
	* tests/data/ok/peg_param-critcl/3_peg_itself:
	* tests/data/ok/peg_param-critcl/4_choice:
	* tests/data/ok/peg_param-critcl/5_sequence:
	* tests/data/ok/peg_param-critcl/6_optional:
	* tests/data/ok/peg_param-critcl/7_kleene:
	* tests/data/ok/peg_param-critcl/8_pkleene:
	* tests/data/ok/peg_param-critcl/9_ahead:

2011-09-08  Andreas Kupries  <andreask@activestate.com>

	* include/expr_pe.inc: Fixed the example to be a proper expression
	* include/expr_pe_serial.inc: grammar, with the correct operator
	* include/expr_peg.inc: precedences. Thanks to Lars Hellstrom.
	* include/expr_serial.inc:

2011-06-06  Andreas Kupries  <andreask@activestate.com>

	* pt_tclparam_config_tcloo.tcl: Fixed typo, OO is TclOO.
	* pkgIndex.tcl: Bumped version to 1.0.2.

2011-02-16  Andreas Kupries  <andreask@activestate.com>

	* include/format/options_tclparam_oo.inc: Documented option -package, and
	* include/format/options_tclparam_snit.inc: the new cross -class/-package
	* pkgIndex.tcl: resolution. Implemented resolution of missing -package