@@ -1,8 +1,8 @@
 [comment {-*- text -*- doctools manpage}]
-[manpage_begin pt::rde n 1.0.1]
+[manpage_begin pt::rde n 1.0.2]
 [include include/module.inc]
 [titledesc {Parsing Runtime Support, PARAM based}]
-[require pt::rde [opt 1.0.1]]
+[require pt::rde [opt 1.0.2]]
 [require snit]
 [require struct::stack 1.4]
 [require pt::ast 1.1]
